# FelgoHotReloadDemo

./: .gitattributes  .gitignore  CMakeLists.txt  FelgoHotReloadDemo.pro  LICENSE.txt  README.md  hot_reload_config.json  hot_reload_config_qmake.json  hot_reload_config_template.json.in  main.cpp
qml/: Page1.qml  Page2.qml  Page3.qml  Page4.qml  Page5.qml  main.qml  qml.qrc
qml_module/: QmlModuleText.qml  qml_module.qrc  qmldir
qml_shared_plugin/: CMakeLists.txt
qml_shared_plugin/qml/: QmlSharedPluginText.qml  qml_shared_plugin.qrc  qmldir
qml_shared_plugin/qml/qt5/: SharedPluginItem.qml
qml_shared_plugin/src/: sharedpluginitem.cpp  sharedpluginitem.h
qml_static_plugin/: CMakeLists.txt  QmlStaticPluginText.qml  qml_static_plugin.qrc  qmldir
